fixed the iphone bug that the first scene invisible when return

--- a/resources/assets/css/styles.scss
+++ b/resources/assets/css/styles.scss
@@ -51,6 +51,10 @@
   z-index: 100;
 }
 
+.iframeWrapper iframe {
+  position: relative !important;
+}
+
 /* .highlight-body .ytPlayerWrapper iframe,
 .watch-body .ytPlayerWrapper iframe {
   position: absolute
@@ -135,6 +139,8 @@
 
 .iframeWrapper {
   position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
 }
